--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -1,6 +1,12 @@
 {
   "version": "2.0",
   "app_name": "serverlessbackend",
+  "autogen_policy": false,
+  "tags": [
+    {
+      "project": "oico"
+    }
+  ],
   "stages": {
     "dev": {
       "api_gateway_stage": "api"
