--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 attrs==20.2.0
+basicauth==0.4.1
+boto3==1.16.16
 botocore==1.19.16
 chalice==1.21.4
 click==7.1.2
@@ -7,5 +9,6 @@ jmespath==0.10.0
 mypy-extensions==0.4.3
 python-dateutil==2.8.1
 PyYAML==5.3.1
+s3transfer==0.3.3
 six==1.15.0
 urllib3==1.25.11
