--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -12,7 +12,9 @@
       "api_gateway_stage": "api",
       "environment_variables": {
         "RESPONSES_TABLE_NAME": "responses",
+        "METADATA_TABLE_NAME": "metadata",
         "MEDIA_BUCKET_NAME": "videos.oico.com",
+        "AUDIO_MEDIA_BUCKET_NAME": "outputvideos.oico.com",
         "PIPELINE_NAME": "1607332673743-ta1eh3"
       }
     }
